add a couple paragraphs of lorem ipsum

--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
   <main>
     <h1>Jeremy Schuurmans</h1>
     <img src="assets/headshot.jpg">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare vitae neque eu elementum. Etiam nunc
+      nisl, congue eu eros quis, ornare rutrum purus. Fusce laoreet lacinia neque, non sollicitudin quam efficitur ac.
+      Suspendisse id dui risus. Duis facilisis nisi vitae tempor maximus. Curabitur finibus, nunc quis bibendum
+      porttitor, ligula dolor porttitor orci, ut fringilla ex sem at mauris. Phasellus pellentesque scelerisque
+      bibendum. Vestibulum vel libero nec urna finibus fringilla sit amet sit amet velit. Sed mi purus, scelerisque a
+      finibus vel, sagittis a mauris.
+    </p>
+    <p>Donec lobortis eu sapien eu malesuada. Mauris ac consectetur magna. Morbi non
+      massa sit amet massa tempor lobortis. Nulla in tortor quis eros pulvinar blandit. Morbi sollicitudin pretium est,
+      pellentesque finibus eros gravida blandit. Praesent bibendum sed velit sagittis hendrerit. Vivamus accumsan vel
+      velit eu consectetur. Nam facilisis bibendum lacus, ut scelerisque augue. Nullam efficitur dui eget venenatis
+      semper. Ut fringilla consectetur nulla sed tristique. Nam pharetra at leo sit amet commodo. Donec semper
+      ullamcorper erat. Maecenas maximus felis a lacus sagittis molestie.
+    </p>
   </main>
 </body>
 
