--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <main>
     <h1>Jeremy Schuurmans</h1>
-    <img src="assets/headshot.jpg">
+    <img src="assets/headshot.jpg" alt="Jeremy wearing green plaid shirt and smiling">
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare vitae neque eu elementum. Etiam nunc
       nisl, congue eu eros quis, ornare rutrum purus. Fusce laoreet lacinia neque, non sollicitudin quam efficitur ac.
